--- a/src/com/FitnessCenter/ui/ACE_FitnessCenterJFrame.form
+++ b/src/com/FitnessCenter/ui/ACE_FitnessCenterJFrame.form
@@ -87,6 +87,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Kh&#xe1;ch h&#xe0;ng"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
