--- a/src/com/FitnessCenter/ui/KhachHangJDialog.form
+++ b/src/com/FitnessCenter/ui/KhachHangJDialog.form
@@ -7,7 +7,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="ACE - Qu&#x1ea3;n l&#xfd; kh&#xe1;ch h&#xe0;ng"/>
+    <Property name="title" type="java.lang.String" value="ACE_FitnessCenter - Qu&#x1ea3;n l&#xfd; kh&#xe1;ch h&#xe0;ng"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
